fixed z-index issue

--- a/src/app/tooltip/tooltip.component.scss
+++ b/src/app/tooltip/tooltip.component.scss
@@ -2,11 +2,12 @@
 
 #tooltip {
     position: absolute;
-    z-index: 4;
+    z-index: -1;
     height: auto;
     backface-visibility: hidden;
 
     &.visible {
+        z-index: 4;
         box-shadow: 0px 0px 10px 3px rgba(0, 0, 0, 0.75);
     }
 }
